Fix my image z-index

--- a/css/siek.css
+++ b/css/siek.css
@@ -96,6 +96,7 @@ a svg:hover #logo{
 	background-size: 220px;
 	text-shadow: 0px 0px 2px #f6f6f6, 0px 0px 7px #f6f6f6, 0px 0px 1px lightsalmon;
 	padding-right:20%;
+	z-index: -10;
 }
 
 #about hr{
